# api-example

./: README.md  docker-compose.yml  pyproject.toml
app/application/contracts/: uow.py
app/application/dtos/: create_book_dto.py  read_book_dto.py  update_book_dto.py
app/application/use_cases/: create_book.py  delete_book.py  get_book.py  list_books.py  update_book.py
app/domain/entities/: book.py
app/domain/repositories/: book_repository.py
app/domain/value_objects/: isbn.py
app/infrastructure/db/: database.py  models.py
app/infrastructure/repositories/: book_repository_impl.py
app/infrastructure/uow/: sqlalchemy_uow.py
app/presentation/: main.py
app/presentation/api/: books_router.py
